# yt-dlp-ffmpeg-download-container

./: README.md  pyproject.toml
environments/: Dockerfile
environments/cpu/: docker-compose.yaml
