[tool.poetry]
name = "yt-dlp-ffmpeg-download-container"
version = "0.0.0"
description = ""
authors = ["nissy-shota <shota_4410@icloud.com>"]
maintainers = ["nissy-shota <shota_4410@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2023.3.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
max-complexity = 18
ignore = ["E203", "E266", "W503"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
